button's reset start and pause icon added in buttons

--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,18 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 1rem;
   .time-display {
     font-family: 'Badeen Display';
     font-size: 100px;
-
-    /* font-weight: bold; */
   }
+}
+
+
+.controller button {
+  width: 110px;
+  height: 50px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  background-color: transparent;
 }
