--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ body {
 #container {
   width: 350px;
   height: 350px;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,14 +34,26 @@ body {
   .time-display {
     font-family: 'Badeen Display';
     font-size: 100px;
+    color: #89964e;
+    letter-spacing: 5px;
+    text-shadow: 2px 2px 2px #252525;
   }
 }
 
 
 .controller button {
-  width: 110px;
+  width: 60px;
+  margin: 0 1.4rem;
+  border: none;
   height: 50px;
   font-size: 1.5rem;
   font-weight: bold;
-  background-color: transparent;
+  color: #89964e;
+  background-color: #89964e31;
+  backdrop-filter: blur(10px);
+  box-shadow: 1px 1px 2px 1px #00000053;
+}
+
+.controller button:active {
+  border-radius: 1rem;
 }
